trying to add my content to a new page

--- a/about.html
+++ b/about.html
@@ -1,29 +1,11 @@
-<!DOCTYPE html>
-<head>
-  <meta charset="utf-8"/>
-  <meta name="Description" CONTENT="Author: Jonathan Walton, artist, writer, ethnomusicologist">
-  <title>Jonathan Walton</title>
-     <!-- Bootstrap styles -->
-    <link href="{{ BASE_PATH }}/assets/themes/bootstrap-3/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Optional theme -->
-    <link href="{{ BASE_PATH }}/assets/themes/bootstrap-3/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-    <!-- Sticky Footer -->
-    <link href="{{ BASE_PATH }}/assets/themes/bootstrap-3/bootstrap/css/bs-sticky-footer.css" rel="stylesheet">
-    
-    <!-- Custom styles -->
-    <link href="{{ ASSET_PATH }}/css/tufte.css?" rel="stylesheet" type="text/css" media="all">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Cache-Control" content="no-store" />
-  <style type="text/css">
-   img { mix-blend-mode: multiply; }
-  </style>
-</head>
-<body>
 
-  <nav>
-    <span>about</span>
-    <span>current</span>
-  </nav> 
+---
+layout: about
+title: About 
+header: About
+group: navigation
+---
+{% include JB/setup %}
 
   <article>
      <figure style="width:87.5%;">
@@ -220,5 +202,4 @@ for (i = 0; i++; i <= num) {
       <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLPJ56FSR6VBFNzpWBetbM_hYiA71Kxg29" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen ></iframe>
     </section>
   </article>
-</body>
-</html>
+
