trying to add my content to a new page with tufte full formatting

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@ group: navigation
 
   <article>
      <figure style="width:87.5%;">
-          <img src="lemeztin.jpg"/>
+          <img src="{{IMAGE_PATH}}/lemeztin.jpg"/>
           <figcaption>Condensed milk label, by Ariadne Arendt</figcaption>
         </figure>
     <h1>Jonathan Walton</h1>
