change Rakefile to add new YAMLFront headers

--- a/all.html
+++ b/all.html
@@ -11,11 +11,11 @@ group: navigation
 		<!--     {{post.content | strip_html | truncatewords:50}} -->
 		<span class="marginnote"><img src={{IMAGE_PATH}}/{{post.image}} height="100"/></span>	
   </p>
-  <a href={{post.url}}>
-  	<h3>	{{post.title}}</h3>
+  <a class="all_page_links" href={{post.url}}>
+  	<h3>	{{post.title}} <span class="all_page_tagline">	{{post.original_published}}</span><br>
+	  	<span class="all_page_tagline">	{{post.original_date}}</span></h3>
 	 <p> {{post.description}}
-	  	<span class="all_page_tagline">	{{post.original_date}}</span>
-	  	<span class="all_page_tagline">	{{post.original_published}}</span>
+	  	
 	 </p>
   </a>
   
