--- a/all.html
+++ b/all.html
@@ -7,17 +7,18 @@ group: navigation
 {% include JB/setup %}
 
 {% for post in site.posts %} 
-  <p>
-		<!--     {{post.content | strip_html | truncatewords:50}} -->
-		<span class="marginnote"><img src={{IMAGE_PATH}}/{{post.image}} height="100"/></span>	
-  </p>
-  <a class="all_page_links" href={{post.url}}>
-  	<h3>	{{post.title}} <span class="all_page_tagline">	{{post.original_published}}</span><br>
+
+<div class="all_page_links" >
+  <a  href={{post.url}}>
+<!--     {{post.content | strip_html | truncatewords:50}} -->
+  <span class="allnote"><img src="{{IMAGE_CROP_PATH}}/{{post.image}}" height="100"/></span>
+  	<h3>	{{post.title}} <span class="all_page_tagline">	{{post.source}}</span><br>
 	  	<span class="all_page_tagline">	{{post.original_date}}</span></h3>
 	 <p> {{post.description}}
 	  	
 	 </p>
   </a>
+  <div>
   
-  <hr>
+  <hr class='nomargin'>
 {% endfor %}
