more posts and better tag links

--- a/all.html
+++ b/all.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title : All
+title : Articles
 header : Post Archive
 group: navigation
+weight: "A"
 ---
 {% include JB/setup %}
 
