--- a/tags.html
+++ b/tags.html
@@ -3,16 +3,18 @@ layout: page
 title: Tags
 header: Posts By Tag
 group: navigation
+weight: "D"
 ---
 {% include JB/setup %}
 
 <ul class="tag_box inline">
-  {% assign tags_list = site.tags %}  
+  {% assign tags_list = (site.tags | sort) %}  
   {% include JB/tags_list %}
 </ul>
 
+{% assign sortedTags = (site.tags | sort )%}
 
-{% for tag in site.tags %} 
+{% for tag in sortedTags %} 
   <h2 id="{{ tag[0] }}-ref">{{ tag[0] }}</h2>
   <ul>
     {% assign pages_list = tag[1] %}  
