--- a/all.html
+++ b/all.html
@@ -21,11 +21,12 @@ weight: "A"
   <a  href={{post.url}}>
 <!--     {{post.content | strip_html | truncatewords:50}} -->
   <span class="allnote"><img src="{{IMAGE_CROP_PATH}}/{{post.image}}" height="100"/></span>
-  	<h3>	{{post.title}} <span class="all_page_tagline">	{{post.source}}</span><br>
-	  	<span class="all_page_tagline">	{{post.original_date}}</span></h3>
-	 <p> {{post.description}}
-	  	
-	 </p>
+  	<h3>	
+  		<span class="all_page_main">{{post.title}}</span>
+  	 	<span class="all_page_tagline">	{{post.source}}</span><br>
+	  	<span class="all_page_tagline">	{{post.original_date}}</span>
+	 </h3>
+	 <p> {{post.description}}</p>
   </a>
   <div>
   
@@ -34,6 +35,7 @@ weight: "A"
 
  <hr class='nomargin thick'>
  <hr class='nomargin thick'>
+
 <h6> Journalism</h6>
 {% for post in site.categories.journalism %} 
 
@@ -41,13 +43,15 @@ weight: "A"
   <a  href={{post.url}}>
 <!--     {{post.content | strip_html | truncatewords:50}} -->
   <span class="allnote"><img src="{{IMAGE_CROP_PATH}}/{{post.image}}" height="100"/></span>
-  	<h3>	{{post.title}} <span class="all_page_tagline">	{{post.source}}</span><br>
-	  	<span class="all_page_tagline">	{{post.original_date}}</span></h3>
-	 <p> {{post.description}}
-	  	
-	 </p>
+
+  	<h3>	
+  		<span class="all_page_main">{{post.title}}</span><br>
+  	 	<span class="all_page_tagline">	{{post.source}} / </span>
+	  	<span class="all_page_tagline">/ {{post.original_date}}</span>
+	 </h3>
+	 <p class='all_desc'> {{post.description}}</p>
   </a>
-  <div>
+   </div>
   
   <hr class='nomargin'>
 {% endfor %}
