--- a/tech.html
+++ b/tech.html
@@ -3,6 +3,62 @@ layout: default
 title : Tech
 header : Tech
 group: navigation
-weight: "BA"
+weight: "AB"
 ---
 {% include JB/setup %}
+
+<subtitle>Tech</subtitle>
+	<ul class="tag_box inline">
+
+		{% assign techArray = site.techarray %}
+
+		{% assign areas = site.categories.tech | map: 'area' | sort  %}
+		{% assign areas2 = areas | uniq %}
+
+		{% assign prevtag = '' %}
+				 	
+		{% for tag in areas %}
+
+		 	{% unless prevtag == tag %}
+			 	<li>
+				 		<a href="#{{tag}}">
+				 		{{tag}}
+				 		</a>
+				</li>
+			{% endunless %}
+			{% assign prevtag = tag %}
+
+		{% endfor %}
+	</ul>
+<br>
+<br>
+
+{% assign tech_list = (site.categories.tech | sort: 'area' ) %}
+{% assign space = " " %}
+{% for post in tech_list %} 
+
+ {% if forloop.index0 == 0 %}
+    <span id="{{post.area}}" class="all_page_tagline category"> {{post.area}}</span>
+    {% else %}
+    <span class="all_page_tagline category"> {{post.area}}</span>
+ {% endif %}
+
+<span class="all_page_tagline category">: {{post.year}}</span>
+<br>
+<div class="all_page_links" >
+
+<a  href={{post.url}}>
+<!--     {{post.content | strip_html | truncatewords:50}} -->
+<span class="allnote"><img src="{{IMAGE_CROP_PATH}}/{{post.image}}" height="100"/></span>
+ 
+<h3 class="music">	
+<span class="all_page_main">{{post.title}}</span><br>
+</h3>
+
+
+<p> {{post.description}}</p>
+</a>
+<div>
+
+<hr class='nomargin'>
+{% endfor %}
