--- a/music.html
+++ b/music.html
@@ -1,33 +1,65 @@
 ---
 layout: default
 title : Music
-header : Post Archive
+header : Music
 group: navigation
 weight: "AC"
 ---
 {% include JB/setup %}
-<subtitle>Music Projects</subtitle>
+<subtitle>{{page.title}}</subtitle>
 
+	<ul class="tag_box inline">
+
+		{% assign techArray = site.techarray %}
+
+		{% assign areas = site.categories.music | map: 'area' | sort  %}
+		{% assign areas2 = areas | uniq %}
+
+		{% assign prevtag = '' %}
+				 	
+		{% for tag in areas %}
+
+		 	{% unless prevtag == tag %}
+			 	<li>
+				 		<a href="#{{tag}}">
+				 		{{tag}}
+				 		</a>
+				</li>
+			{% endunless %}
+			{% assign prevtag = tag %}
+
+		{% endfor %}
+	</ul>
+
+<div class='clear'>
 {% assign music_list = (site.categories.music | sort: 'area' ) %}
-
+{% assign prevtag = '' %}
 {% for post in music_list %} 
-<span class="all_page_tagline category"> {{post.area}}</span>
-<span class="all_page_tagline category">: {{post.year}}</span>
-<br>
-<div class="all_page_links" >
 
-<a  href={{post.url}}>
-<!--     {{post.content | strip_html | truncatewords:50}} -->
-<span class="allnote"><img src="{{IMAGE_CROP_PATH}}/{{post.image}}" height="100"/></span>
- 
-<h3 class="music">	
-<span class="all_page_main">{{post.title}}</span><br>
-</h3>
+	{% if prevtag != post.area %}
+	    <span id="{{post.area}}" class="all_page_tagline category"> {{post.area}}</span>
+	    {% else %}
+	    <span class="all_page_tagline category"> {{post.area}}</span>
+	 {% endif %}
 
+    <span class="all_page_tagline category">: {{post.year}}</span>
+    
+    <br>
+    <div class="all_page_links" >
+      <a  href={{post.url}}>
+      <!--     {{post.content | strip_html | truncatewords:50}} -->
+    <img class="allnote" src="{{IMAGE_CROP_PATH}}/{{post.image}}"/>
+      <div class="index-title">
 
-<p> {{post.description}}</p>
-</a>
-<div>
-
-<hr class='nomargin'>
+      	<h3>	
+        	<span class="all_page_main">{{post.title}}</span><br>
+    	 </h3>
+    	 <p class='all_desc'> {{post.description}}</p>
+      </div>
+      </a>
+     </div>
+  
+  <hr class='nomargin'>
+  {% assign prevtag = post.area %}
 {% endfor %}
+</div>
