images click to toggle bigger

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@ weight: "A"
     <a href="{{post.url}}">
        <img class="allnote" src="{{IMAGE_CROP_PATH}}/{{post.image}}"/>
        <div class="index-title">
-    	   <h3 class="all_page_main">{{post.title}}</h3>
+    	   <h3>
+          <span class="all_page_main">{{post.title}}</span><br>
+          
+        </h3>
   	     <p class='all_desc'> {{post.description}}</p>
         </div>
     </a>
