content and tagbox tweaks

--- a/tech.html
+++ b/tech.html
@@ -32,6 +32,11 @@ weight: "AD"
 		{% endfor %}
 	</ul>
 
+<div class='clear'>
+	 {% include fullimage src="http://ghchart.rshah.io/lemez" alt="My Github commits chart" caption="Github commits graph: green = addiction; grey = life." %}
+</clear>
+
+
 
 <div class='clear'>
 {% assign tech_list = (site.categories.tech | sort: 'area' ) %}
