--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title : Home
-header : Post Archive
+header : Hello
 ---
 {% include JB/setup %}
-<h1 class='homepage'> Hello. I'm <a href="about.html">Jonathan</a>. Here you can see what I've been up to. The <a href="writing.html">writing</a> page has blog entries, articles and radio/tv; on the <a href="music.html">music</a> page you can find various projects large and small; the <a href="music.html">tech</a> and <a href="lyrics.html">lyrics</a> pages have... you get the picture.</h1>
-<h1> Oh, and if you want to browse by <a href="world.html">location</a> or <a href="categories.html">topic</a>, you can do that too.</h1>
+<h1 class='homepage'> Hello. I'm <a href="about.html">Jonathan</a>. Here you can see what I've been up to. The <a href="writing.html">writing</a> page has thoughts, journalism and media; the <a href="music.html">music</a> page has music projects large and small; the <a href="music.html">tech</a> and <a href="lyrics.html">lyrics</a> pages have... you get the picture.</h1>
+<h1> Oh, and if you want to browse everything by <a href="world.html">location</a> or <a href="categories.html">topic</a>, you can do that too.</h1>
