added lyric to music page, improved index layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@ header : Hello
 ---
 {% include JB/setup %}
 <!-- {% include signs text="w,e,l,c,o,m,e" %} -->
-
-<h1 class='homepage'> Hello. I'm <a href="/about.html">Jonathan</a>. Thanks for dropping by. The <a href="/writing.html">writing</a> page has thoughts, journalism and media; the <a href="/music.html">music</a> page has music and art projects; the <a href="/tech.html">tech</a> and <a href="/lyrics.html">songs</a> pages have... you get the picture.</h1>
-<h1> Oh, and if you want to browse everything by <a href="//world.html">location</a> or by <a href="/categories.html">topic</a>, you can do that too.</h1> 
+      
+ {% assign lyrics = site.posts | where: "title", "Song Lyrics" %}     
+<h1 class='homepage'> Hello. I'm <a href="/about.html">Jonathan</a>. Thanks for dropping by.</h1>
+<h2 class='index'>
+The <a href="/music.html">music</a> page has music and art projects; the <a href="/writing.html">media</a> page has broadcasting, print and other publications;  the <a href="/tech.html">tech</a> and <a href="{{lyrics[0].url}}">lyrics</a> pages have... you get the picture.</h2>
+<h2 class='index'> If you want to search by <a href="//world.html">location</a> or by <a href="/categories.html">topic</a>, you can do that too.</h2> 
+<h2 class='index'>And if you don't want to browse at all, you can watch my YouTube favourites below - same idea: more succinct. </h2>
+<br>
+<br>
+{% include videoplaylistfull url="LLRQVtG1GPjsa0YHOmGyiiqQ" %}
+  
 
 <!-- or if you just want to jump right into the good stuff, start here. just want to watch a good film, or listen to something, go right ahead. -->
