--- a/writing.html
+++ b/writing.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title : Reporting
+title : Media
 header : Post Archive
 group: navigation
 weight: "AD"
@@ -96,7 +96,7 @@ weight: "AD"
 <div class='clear'>
   {% for post in site.categories.publications %}
 
-  <div class="all_page_links" >
+  <div class="all_page_links mainstory" >
 
     <a  href={{post.url}}>
 
@@ -108,8 +108,6 @@ weight: "AD"
         <div class="index-title">
           <h3>  
             <span class="all_page_main">{{post.title}}</span><br>
-            <span class="all_page_tagline"> {{post.source}} / </span>
-            <span class="all_page_tagline">/ {{post.original_date}}</span>
            </h3>
            <br>
            <p class='all_desc'> {{post.description}}</p>
@@ -119,11 +117,9 @@ weight: "AD"
 
   </div>
 
-   <hr class='nomargin thick'>
-
   {% endfor %}
 
-  <hr class='nomargin thick'>
+
 
 
   {% assign articles = site.categories.print | sort: "title" %}
